@@ -1,12 +1,12 @@
-<!--$Id: bottombar.html,v 1.11 2003-01-10 06:55:28 natbobc Exp $-->
+<!--$Id: bottombar.html,v 1.12 2003-01-10 07:34:47 natbobc Exp $-->
 <!-- =================================================================== -->
 <!--                                                                     -->
-<!--			Tabbed Navigation bar                            -->
+<!--			Tabbed Navigation bar                                          -->
 <!--                                                                     -->
 <!-- Only add this on pages that are long, such that the left sidebar is -->
 <!-- is not visible when at the bottom.                                  -->
 
-<p align="center">
+<p class="sm">
 <a href="index.shtml">Home</a>		    |
 <a href="licensing.shtml">Licensing</a>	    |
 <a href="lists.shtml">Lists</a>		    |
