@@ -1,11 +1,11 @@
-<!--$Id: footer.html,v 1.4 2001-08-27 19:41:19 stevedperkins Exp $-->
+<!--$Id: footer.html,v 1.5 2003-01-10 07:34:47 natbobc Exp $-->
 <!-- ================================================================== -->
 <!--                                                                    -->
 <!--			     Footer                                     -->
 <!--                                                                    -->
 
-<p>
-<i><small>
+<p class="sm">
+<i>
 Please submit bugs and web site problems (bad html, broken links) via
 <a href="http://sourceforge.net/bugs/?func=addbug&group_id=2435">
 online bugtracker form</a>
@@ -18,4 +18,4 @@ Submit news, announcements, additions, and links via
 online patch form</a> (with
 <a href="https://sourceforge.net/account/login.php?return_to=/patch/%3ffunc%3daddpatch%26group_id%3d2435">
 SF login</a>).
-</small></i></p>
+</i></p>
