@@ -1,7 +1,7 @@
-<!--$Id: lsidebar.html,v 1.18 2003-01-10 07:08:03 natbobc Exp $-->
+<!--$Id: lsidebar.html,v 1.19 2003-01-10 07:34:47 natbobc Exp $-->
 <!-- ================================================================== -->
 <!--                                                                    -->
-<!--			     Left Sidebar                               -->
+<!--			                   Left Sidebar                               -->
 <!--                                                                    -->
 
 <table border="0">
